[package]
name = "lumi-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
clone-macro = "0.1.0"
crossbeam-channel = "0.5.13"
enum_dispatch = "0.3.13"
fastrand = "2.1.1"
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
log = "0.4.22"
lumi2d = { git = "https://github.com/lumi-rs/lumi2d.git" }
reqwest = { version = "0.12.9", optional = true }
ureq = { version = "2.10.1", optional = true }

[dev-dependencies]
simple_logger = "5.0.0"


[features]
default = ["ureq"]
ureq = ["dep:ureq"]
reqwest = ["dep:reqwest"]



[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
