[package]
name = "lumi-ui"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/*", "examples/*"]

[dependencies]
lumi-dylib = { path = "crates/lumi-dylib", optional = true }
lumi-internal = { path = "crates/lumi-internal" }

[features]
default = ["lumi-internal/ureq"]
dynamic_linking = ["dep:lumi-dylib"]
ureq = ["lumi-internal/ureq"]
reqwest = ["lumi-internal/reqwest"]


[dev-dependencies]
log = "0.4"
simple_logger = "5.0.0"


# [profile.release]
# opt-level = 3
# strip = "debuginfo"
# lto = "fat"
